// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageList should render correctly with data 1`] = `
<div
  className="static-gallery"
  style={
    Object {
      "ZIndex": "-1",
      "align": "center",
      "borderTop": "1px solid lightGrey",
      "height": "auto",
      "marginBottom": "30%",
      "marginLeft": "19.71%",
      "marginTop": "50%",
      "paddingTop": "2%",
      "position": "absolute",
      "width": "61%",
    }
  }
>
  <div
    className="tour-title"
  >
    <div
      style={
        Object {
          "ZIndex": "-1",
          "color": "#484848",
          "cursor": "default",
          "display": "block",
          "font": "800 28px system-ui",
          "fontSize": "30px",
          "marginBottom": "6%",
          "marginLeft": "0.4%",
          "position": "relative",
          "textRendering": "optimizelegibility",
        }
      }
    >
      <h1>
        Tour this house
      </h1>
    </div>
  </div>
  <div
    className="tour_image_table"
    style={
      Object {
        "ZIndex": "-1",
        "display": "flex",
        "font": "400 14px system-ui",
        "height": "auto",
        "position": "absolute",
      }
    }
  >
    <ImageListCol
      allUrls={
        Array [
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_2.jpg",
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_2_4.jpg",
        ]
      }
      colIndex={0}
      key="0"
      roomRows={
        Array [
          Array [
            Object {
              "name": "bedroom_1_",
              "numImages": 3,
            },
            Object {
              "name": "bedroom_2_",
              "numImages": 4,
            },
          ],
        ]
      }
      rooms={
        Array [
          Object {
            "name": "bedroom_1_",
            "numImages": 3,
          },
          Object {
            "name": "bedroom_2_",
            "numImages": 4,
          },
        ]
      }
      urls={
        Array [
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
          undefined,
        ]
      }
    />
    <ImageListCol
      allUrls={
        Array [
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_2.jpg",
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_2_4.jpg",
        ]
      }
      colIndex={1}
      key="1"
      roomRows={
        Array [
          Array [
            Object {
              "name": "bedroom_1_",
              "numImages": 3,
            },
            Object {
              "name": "bedroom_2_",
              "numImages": 4,
            },
          ],
        ]
      }
      rooms={
        Array [
          Object {
            "name": "bedroom_1_",
            "numImages": 3,
          },
          Object {
            "name": "bedroom_2_",
            "numImages": 4,
          },
        ]
      }
      urls={
        Array [
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
          undefined,
        ]
      }
    />
    <ImageListCol
      allUrls={
        Array [
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_2.jpg",
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_2_4.jpg",
        ]
      }
      colIndex={2}
      key="2"
      roomRows={
        Array [
          Array [
            Object {
              "name": "bedroom_1_",
              "numImages": 3,
            },
            Object {
              "name": "bedroom_2_",
              "numImages": 4,
            },
          ],
        ]
      }
      rooms={
        Array [
          Object {
            "name": "bedroom_1_",
            "numImages": 3,
          },
          Object {
            "name": "bedroom_2_",
            "numImages": 4,
          },
        ]
      }
      urls={
        Array [
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
          undefined,
        ]
      }
    />
    <ImageListCol
      allUrls={
        Array [
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_2.jpg",
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_2_4.jpg",
        ]
      }
      colIndex={3}
      key="3"
      roomRows={
        Array [
          Array [
            Object {
              "name": "bedroom_1_",
              "numImages": 3,
            },
            Object {
              "name": "bedroom_2_",
              "numImages": 4,
            },
          ],
        ]
      }
      rooms={
        Array [
          Object {
            "name": "bedroom_1_",
            "numImages": 3,
          },
          Object {
            "name": "bedroom_2_",
            "numImages": 4,
          },
        ]
      }
      urls={
        Array [
          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
          undefined,
        ]
      }
    />
  </div>
</div>
`;

exports[`ImageList should render correctly without data 1`] = `
<div
  className="static-gallery"
  style={
    Object {
      "ZIndex": "-1",
      "align": "center",
      "borderTop": "1px solid lightGrey",
      "height": "auto",
      "marginBottom": "30%",
      "marginLeft": "19.71%",
      "marginTop": "50%",
      "paddingTop": "2%",
      "position": "absolute",
      "width": "61%",
    }
  }
>
  <div
    className="tour-title"
  >
    <div
      style={
        Object {
          "ZIndex": "-1",
          "color": "#484848",
          "cursor": "default",
          "display": "block",
          "font": "800 28px system-ui",
          "fontSize": "30px",
          "marginBottom": "6%",
          "marginLeft": "0.4%",
          "position": "relative",
          "textRendering": "optimizelegibility",
        }
      }
    >
      <h1>
        Tour this house
      </h1>
    </div>
  </div>
  <div
    className="tour_image_table"
    style={
      Object {
        "ZIndex": "-1",
        "display": "flex",
        "font": "400 14px system-ui",
        "height": "auto",
        "position": "absolute",
      }
    }
  >
    <ImageListCol
      allUrls={Array []}
      colIndex={0}
      key="0"
      roomRows={Array []}
      rooms={Array []}
      urls={Array []}
    />
    <ImageListCol
      allUrls={Array []}
      colIndex={1}
      key="1"
      roomRows={Array []}
      rooms={Array []}
      urls={Array []}
    />
    <ImageListCol
      allUrls={Array []}
      colIndex={2}
      key="2"
      roomRows={Array []}
      rooms={Array []}
      urls={Array []}
    />
    <ImageListCol
      allUrls={Array []}
      colIndex={3}
      key="3"
      roomRows={Array []}
      rooms={Array []}
      urls={Array []}
    />
  </div>
</div>
`;

exports[`ImageListCol should render correctly with data 1`] = `
<div
  className="tour_image_col"
>
  <ImageListEntry
    key="00"
    room={
      Object {
        "name": "bedroom_1_",
        "numImages": 3,
      }
    }
    url="https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg"
  />
  <ImageListEntry
    key="01"
    room={
      Object {
        "name": "bedroom_3_",
        "numImages": 3,
      }
    }
  />
</div>
`;

exports[`ImageListCol should render correctly without data 1`] = `
<div
  className="tour_image_col"
/>
`;

exports[`ImageListEntry should render correctly with data 1`] = `
<div
  className="tour-entry"
>
  <div
    className="tour_image"
  >
    <img
      href="#Bedroom 1"
      style={
        Object {
          "ZIndex": "-1",
          "borderRadius": "5px",
          "cursor": "crosshair",
          "height": "164px",
          "marginLeft": "5px",
          "marginRight": "5px",
          "position": "relative",
          "width": "246px",
        }
      }
    />
    <div
      className="room-label"
      style={
        Object {
          "ZIndex": "-1",
          "color": "#484848",
          "cursor": "default",
          "font": "600 16px system-ui",
          "marginBottom": "10%",
          "marginLeft": "4px",
          "position": "relative",
          "textRendering": "optimizelegibility",
        }
      }
    >
      <span>
        Bedroom 1
      </span>
    </div>
  </div>
</div>
`;

exports[`PhotoGallery should render correctly 1`] = `
<div>
  <div
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="splash"
      style={
        Object {
          "ZIndex": "-1",
          "border": "none",
          "display": "block",
          "height": "686px",
          "left": "0",
          "marginLeft": "33%",
          "marginTop": "10%",
          "maxHeight": "686px",
          "maxWidth": "1082.66px",
          "position": "absolute",
          "top": "0",
          "width": "1082.66px",
        }
      }
    >
      <Splash
        imageUrls={Array []}
      />
    </div>
    <div
      className="room_images_list"
    >
      <ImageList
        imageUrls={Array []}
        rooms={Array []}
      />
    </div>
  </div>
  <div
    className="photos_modal"
  >
    <PhotoModal
      displayStyle={
        Object {
          "display": "block",
        }
      }
      handleClose={[Function]}
      handleOpen={[Function]}
      imageUrls={Array []}
      rooms={Array []}
      show={false}
    />
  </div>
</div>
`;

exports[`PhotoModal should render correctly with data 1`] = `
<div
  className="modal-container"
>
  <div
    className="tour-button"
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "ZIndex": "-1",
          "background": "none",
          "border": "none",
          "cursor": "crosshair",
          "display": "block",
          "height": "686px",
          "marginLeft": "33%",
          "marginTop": "10%",
          "maxHeight": "686px",
          "maxWidth": "1092.66px",
          "outline": "none",
          "position": "static",
          "width": "1083.66px",
        }
      }
    />
     
    <div
      onClick={[Function]}
      style={
        Object {
          "ZIndex": "-2",
          "background": "lightGrey",
          "borderRadius": "4px",
          "color": "#484848",
          "cursor": "pointer",
          "display": "block",
          "float": "right",
          "font": "800 14px system-ui",
          "height": "4%",
          "left": "0",
          "marginLeft": "86.4%",
          "marginTop": "37.6%",
          "paddingTop": "0.6%",
          "position": "absolute",
          "textAlign": "center",
          "textRendering": "optimizelegibility",
          "top": "0",
          "width": "10%",
        }
      }
    >
      <span>
         TOUR THIS HOME 
      </span>
    </div>
  </div>
  <div
    className="explore-button"
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsSize="large"
      bsStyle="primary"
      disabled={false}
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      style={
        Object {
          "ZIndex": "-1",
          "background": "none",
          "border": "none",
          "borderRadius": "4px",
          "color": "#a61d55",
          "cursor": "pointer",
          "display": "block",
          "float": "left",
          "font": "500 18px system-ui",
          "height": "5%",
          "left": "0",
          "marginBottom": "3%",
          "marginLeft": "19.71%",
          "marginTop": "126.8%",
          "outline": "none",
          "position": "absolute",
          "textAlign": "left",
          "textDecoration": "none",
          "textRendering": "optimizelegibility",
          "top": "0",
          "width": "12%",
        }
      }
    >
      Explore all 
      3
       photos
    </Button>
  </div>
  <Modal
    animation={true}
    aria-labelledby="contained-modal-title"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    container={
      PhotoModal {
        "buttonRef": Object {
          "current": null,
        },
        "context": Object {},
        "handleImageOpen": [Function],
        "handleTourOpen": [Function],
        "handleViewOpen": [Function],
        "props": Object {
          "displayStyle": Object {
            "display": "none",
          },
          "handleClose": [Function],
          "handleOpen": [Function],
          "imageUrls": Array [
            "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
            "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_2.jpg",
            "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_2_4.jpg",
          ],
          "rooms": Array [
            Object {
              "name": "bedroom_1_",
              "numImages": 3,
            },
            Object {
              "name": "bedroom_2_",
              "numImages": 4,
            },
          ],
          "show": false,
        },
        "refs": Object {},
        "setState": [Function],
        "state": Object {
          "buttonContent": "",
          "displayStyle": Object {
            "display": "none",
          },
          "displayTourStyle": Object {
            "ZIndex": "1",
            "background": "none",
            "borderColor": "white",
            "display": "grid",
            "float": "left",
            "height": "0%",
            "left": "0",
            "marginTop": "2.5%",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "position": "static",
            "scrollBehavior": "smooth",
            "textRendering": "optimizelegibility",
            "top": "0",
            "width": "100%",
          },
          "displayViewStyle": Object {
            "ZIndex": "1",
            "animation": "slideUp .5s linear",
            "background": "none",
            "display": "flex",
            "flexDirection": "column",
            "float": "left",
            "height": "80%",
            "left": "0",
            "maxWidth": "80%",
            "minHeight": "100%",
            "overflow": "scroll",
            "paddingBottom": "2%",
            "paddingTop": "1%",
            "position": "static",
            "textRendering": "optimizelegibility",
            "top": "0",
            "width": "80%",
          },
          "exploreButtonAreaStyle": Object {
            "ZIndex": "-1",
            "background": "none",
            "border": "none",
            "borderRadius": "4px",
            "display": "block",
            "height": "5%",
            "left": "0",
            "marginLeft": "19.71%",
            "marginTop": "126.8%",
            "position": "absolute",
            "top": "0",
            "width": "11%",
          },
          "exploreButtonStyle": Object {
            "ZIndex": "-1",
            "background": "none",
            "border": "none",
            "borderRadius": "4px",
            "color": "#a61d55",
            "cursor": "pointer",
            "display": "block",
            "float": "left",
            "font": "500 18px system-ui",
            "height": "5%",
            "left": "0",
            "marginBottom": "3%",
            "marginLeft": "19.71%",
            "marginTop": "126.8%",
            "outline": "none",
            "position": "absolute",
            "textAlign": "left",
            "textDecoration": "none",
            "textRendering": "optimizelegibility",
            "top": "0",
            "width": "12%",
          },
          "open": false,
          "show": false,
          "splashButtonAreaStyle": Object {
            "ZIndex": "-1",
            "background": "none",
            "border": "none",
            "cursor": "crosshair",
            "display": "block",
            "height": "686px",
            "marginLeft": "33%",
            "marginTop": "10%",
            "maxHeight": "686px",
            "maxWidth": "1092.66px",
            "outline": "none",
            "position": "static",
            "width": "1083.66px",
          },
          "splashButtonStyle": Object {
            "ZIndex": "-2",
            "background": "lightGrey",
            "borderRadius": "4px",
            "color": "#484848",
            "cursor": "pointer",
            "display": "block",
            "float": "right",
            "font": "800 14px system-ui",
            "height": "4%",
            "left": "0",
            "marginLeft": "86.4%",
            "marginTop": "37.6%",
            "paddingTop": "0.6%",
            "position": "absolute",
            "textAlign": "center",
            "textRendering": "optimizelegibility",
            "top": "0",
            "width": "10%",
          },
          "tourRoomsPage": false,
          "viewAllPage": false,
        },
        "updater": Updater {
          "_callbacks": Array [],
          "_renderer": ReactShallowRenderer {
            "_context": Object {},
            "_element": <PhotoModal
              displayStyle={
                Object {
                  "display": "none",
                }
              }
              handleClose={[Function]}
              handleOpen={[Function]}
              imageUrls={
                Array [
                  "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
                  "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_2.jpg",
                  "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_2_4.jpg",
                ]
              }
              rooms={
                Array [
                  Object {
                    "name": "bedroom_1_",
                    "numImages": 3,
                  },
                  Object {
                    "name": "bedroom_2_",
                    "numImages": 4,
                  },
                ]
              }
              show={false}
            />,
            "_forcedUpdate": false,
            "_instance": [Circular],
            "_newState": null,
            "_rendered": <div
              className="modal-container"
            >
              <div
                className="tour-button"
              >
                <Button
                  active={false}
                  block={false}
                  bsClass="btn"
                  bsStyle="default"
                  disabled={false}
                  onClick={[Function]}
                  style={
                    Object {
                      "ZIndex": "-1",
                      "background": "none",
                      "border": "none",
                      "cursor": "crosshair",
                      "display": "block",
                      "height": "686px",
                      "marginLeft": "33%",
                      "marginTop": "10%",
                      "maxHeight": "686px",
                      "maxWidth": "1092.66px",
                      "outline": "none",
                      "position": "static",
                      "width": "1083.66px",
                    }
                  }
                />
                 
                <div
                  onClick={[Function]}
                  style={
                    Object {
                      "ZIndex": "-2",
                      "background": "lightGrey",
                      "borderRadius": "4px",
                      "color": "#484848",
                      "cursor": "pointer",
                      "display": "block",
                      "float": "right",
                      "font": "800 14px system-ui",
                      "height": "4%",
                      "left": "0",
                      "marginLeft": "86.4%",
                      "marginTop": "37.6%",
                      "paddingTop": "0.6%",
                      "position": "absolute",
                      "textAlign": "center",
                      "textRendering": "optimizelegibility",
                      "top": "0",
                      "width": "10%",
                    }
                  }
                >
                  <span>
                     TOUR THIS HOME 
                  </span>
                </div>
              </div>
              <div
                className="explore-button"
              >
                <Button
                  active={false}
                  block={false}
                  bsClass="btn"
                  bsSize="large"
                  bsStyle="primary"
                  disabled={false}
                  onClick={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "ZIndex": "-1",
                      "background": "none",
                      "border": "none",
                      "borderRadius": "4px",
                      "color": "#a61d55",
                      "cursor": "pointer",
                      "display": "block",
                      "float": "left",
                      "font": "500 18px system-ui",
                      "height": "5%",
                      "left": "0",
                      "marginBottom": "3%",
                      "marginLeft": "19.71%",
                      "marginTop": "126.8%",
                      "outline": "none",
                      "position": "absolute",
                      "textAlign": "left",
                      "textDecoration": "none",
                      "textRendering": "optimizelegibility",
                      "top": "0",
                      "width": "12%",
                    }
                  }
                >
                  Explore all 
                  3
                   photos
                </Button>
              </div>
              <Modal
                animation={true}
                aria-labelledby="contained-modal-title"
                autoFocus={true}
                backdrop={true}
                bsClass="modal"
                container={[Circular]}
                dialogComponentClass={[Function]}
                enforceFocus={true}
                keyboard={true}
                manager={
                  ModalManager {
                    "add": [Function],
                    "containers": Array [],
                    "data": Array [],
                    "handleContainerOverflow": true,
                    "hideSiblingNodes": true,
                    "isTopModal": [Function],
                    "modals": Array [],
                    "remove": [Function],
                  }
                }
                onHide={[Function]}
                renderBackdrop={[Function]}
                restoreFocus={true}
                show={false}
                style={
                  Object {
                    "ZIndex": "1",
                    "background": "none",
                    "borderColor": "white",
                    "display": "grid",
                    "float": "left",
                    "height": "0%",
                    "left": "0",
                    "marginTop": "2.5%",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "position": "static",
                    "scrollBehavior": "smooth",
                    "textRendering": "optimizelegibility",
                    "top": "0",
                    "width": "100%",
                  }
                }
              >
                <ModalHeader
                  bsClass="modal-header"
                  closeButton={false}
                  closeLabel="Close"
                  style={
                    Object {
                      "ZIndex": "1",
                      "backgroundColor": "white",
                      "borderBottom": "1px solid lightGrey",
                      "height": "70px",
                      "left": "0",
                      "marginBottom": "1%",
                      "position": "fixed",
                      "textRendering": "optimizelegibility",
                      "top": "0",
                      "width": "100%",
                    }
                  }
                >
                  <ModalTitle
                    bsClass="modal-title"
                    componentClass="h4"
                    id="contained-modal-title"
                  >
                    <div>
                      <Button
                        active={false}
                        block={false}
                        bsClass="btn"
                        bsStyle="default"
                        disabled={false}
                        onClick={[Function]}
                        style={
                          Object {
                            "background": "none",
                            "border": "none",
                            "color": "grey",
                            "cursor": "pointer",
                            "display": "flex",
                            "float": "left",
                            "fontSize": "36px",
                            "height": "40px",
                            "left": "0",
                            "marginLeft": "2%",
                            "marginTop": "15px",
                            "outline": "none",
                            "position": "fixed",
                            "textRendering": "optimizelegibility",
                            "top": "0",
                            "width": "40px",
                          }
                        }
                      >
                        <i
                          class="fas fa-arrow-circle-left"
                        />
                      </Button>
                       
                      <Button
                        active={false}
                        block={false}
                        bsClass="btn"
                        bsStyle="default"
                        disabled={false}
                        onClick={[Function]}
                        style={
                          Object {
                            "border": "2px solid lightGrey",
                            "borderRadius": "4px",
                            "color": "#484848",
                            "cursor": "pointer",
                            "display": "inline-block",
                            "float": "left",
                            "font": "500 14px system-ui",
                            "height": "40px",
                            "left": "0",
                            "marginLeft": "18.5%",
                            "marginTop": "15px",
                            "outline": "none",
                            "position": "fixed",
                            "top": "0",
                            "width": "10%",
                          }
                        }
                      >
                        
                      </Button>
                    </div>
                  </ModalTitle>
                </ModalHeader>
                <ModalBody
                  bsClass="modal-body"
                  componentClass="div"
                >
                  <div
                    className="view-rooms-modal"
                    style={
                      Object {
                        "ZIndex": "1",
                        "animation": "slideUp .5s linear",
                        "background": "none",
                        "display": "flex",
                        "flexDirection": "column",
                        "float": "left",
                        "height": "80%",
                        "left": "0",
                        "maxWidth": "80%",
                        "minHeight": "100%",
                        "overflow": "scroll",
                        "paddingBottom": "2%",
                        "paddingTop": "1%",
                        "position": "static",
                        "textRendering": "optimizelegibility",
                        "top": "0",
                        "width": "80%",
                      }
                    }
                  >
                    <ViewRoomsModal
                      className="view-rooms-modal"
                      displayStyle={
                        Object {
                          "ZIndex": "1",
                          "animation": "slideUp .5s linear",
                          "background": "none",
                          "display": "flex",
                          "flexDirection": "column",
                          "float": "left",
                          "height": "80%",
                          "left": "0",
                          "maxWidth": "80%",
                          "minHeight": "100%",
                          "overflow": "scroll",
                          "paddingBottom": "2%",
                          "paddingTop": "1%",
                          "position": "static",
                          "textRendering": "optimizelegibility",
                          "top": "0",
                          "width": "80%",
                        }
                      }
                      imageUrls={
                        Array [
                          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
                          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_2.jpg",
                          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_2_4.jpg",
                        ]
                      }
                      rooms={
                        Array [
                          Object {
                            "name": "bedroom_1_",
                            "numImages": 3,
                          },
                          Object {
                            "name": "bedroom_2_",
                            "numImages": 4,
                          },
                        ]
                      }
                    />
                  </div>
                  <div
                    className="tour-rooms-modal"
                    style={
                      Object {
                        "ZIndex": "1",
                        "background": "none",
                        "borderColor": "white",
                        "display": "grid",
                        "float": "left",
                        "height": "0%",
                        "left": "0",
                        "marginTop": "2.5%",
                        "maxHeight": "100%",
                        "maxWidth": "100%",
                        "position": "static",
                        "scrollBehavior": "smooth",
                        "textRendering": "optimizelegibility",
                        "top": "0",
                        "width": "100%",
                      }
                    }
                  >
                    <TourRoomsModal
                      displayStyle={
                        Object {
                          "ZIndex": "1",
                          "background": "none",
                          "borderColor": "white",
                          "display": "grid",
                          "float": "left",
                          "height": "0%",
                          "left": "0",
                          "marginTop": "2.5%",
                          "maxHeight": "100%",
                          "maxWidth": "100%",
                          "position": "static",
                          "scrollBehavior": "smooth",
                          "textRendering": "optimizelegibility",
                          "top": "0",
                          "width": "100%",
                        }
                      }
                      handleImageOpen={[Function]}
                      imageUrls={
                        Array [
                          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
                          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_2.jpg",
                          "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_2_4.jpg",
                        ]
                      }
                      rooms={
                        Array [
                          Object {
                            "name": "bedroom_1_",
                            "numImages": 3,
                          },
                          Object {
                            "name": "bedroom_2_",
                            "numImages": 4,
                          },
                        ]
                      }
                    />
                  </div>
                </ModalBody>
              </Modal>
            </div>,
            "_rendering": false,
            "_updater": [Circular],
          },
        },
        Symbol(enzyme.__setState__): [Function],
      }
    }
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
    style={
      Object {
        "ZIndex": "1",
        "background": "none",
        "borderColor": "white",
        "display": "grid",
        "float": "left",
        "height": "0%",
        "left": "0",
        "marginTop": "2.5%",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "position": "static",
        "scrollBehavior": "smooth",
        "textRendering": "optimizelegibility",
        "top": "0",
        "width": "100%",
      }
    }
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={false}
      closeLabel="Close"
      style={
        Object {
          "ZIndex": "1",
          "backgroundColor": "white",
          "borderBottom": "1px solid lightGrey",
          "height": "70px",
          "left": "0",
          "marginBottom": "1%",
          "position": "fixed",
          "textRendering": "optimizelegibility",
          "top": "0",
          "width": "100%",
        }
      }
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
        id="contained-modal-title"
      >
        <div>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "background": "none",
                "border": "none",
                "color": "grey",
                "cursor": "pointer",
                "display": "flex",
                "float": "left",
                "fontSize": "36px",
                "height": "40px",
                "left": "0",
                "marginLeft": "2%",
                "marginTop": "15px",
                "outline": "none",
                "position": "fixed",
                "textRendering": "optimizelegibility",
                "top": "0",
                "width": "40px",
              }
            }
          >
            <i
              class="fas fa-arrow-circle-left"
            />
          </Button>
           
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "border": "2px solid lightGrey",
                "borderRadius": "4px",
                "color": "#484848",
                "cursor": "pointer",
                "display": "inline-block",
                "float": "left",
                "font": "500 14px system-ui",
                "height": "40px",
                "left": "0",
                "marginLeft": "18.5%",
                "marginTop": "15px",
                "outline": "none",
                "position": "fixed",
                "top": "0",
                "width": "10%",
              }
            }
          />
        </div>
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <div
        className="view-rooms-modal"
        style={
          Object {
            "ZIndex": "1",
            "animation": "slideUp .5s linear",
            "background": "none",
            "display": "flex",
            "flexDirection": "column",
            "float": "left",
            "height": "80%",
            "left": "0",
            "maxWidth": "80%",
            "minHeight": "100%",
            "overflow": "scroll",
            "paddingBottom": "2%",
            "paddingTop": "1%",
            "position": "static",
            "textRendering": "optimizelegibility",
            "top": "0",
            "width": "80%",
          }
        }
      >
        <ViewRoomsModal
          className="view-rooms-modal"
          displayStyle={
            Object {
              "ZIndex": "1",
              "animation": "slideUp .5s linear",
              "background": "none",
              "display": "flex",
              "flexDirection": "column",
              "float": "left",
              "height": "80%",
              "left": "0",
              "maxWidth": "80%",
              "minHeight": "100%",
              "overflow": "scroll",
              "paddingBottom": "2%",
              "paddingTop": "1%",
              "position": "static",
              "textRendering": "optimizelegibility",
              "top": "0",
              "width": "80%",
            }
          }
          imageUrls={
            Array [
              "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
              "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_2.jpg",
              "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_2_4.jpg",
            ]
          }
          rooms={
            Array [
              Object {
                "name": "bedroom_1_",
                "numImages": 3,
              },
              Object {
                "name": "bedroom_2_",
                "numImages": 4,
              },
            ]
          }
        />
      </div>
      <div
        className="tour-rooms-modal"
        style={
          Object {
            "ZIndex": "1",
            "background": "none",
            "borderColor": "white",
            "display": "grid",
            "float": "left",
            "height": "0%",
            "left": "0",
            "marginTop": "2.5%",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "position": "static",
            "scrollBehavior": "smooth",
            "textRendering": "optimizelegibility",
            "top": "0",
            "width": "100%",
          }
        }
      >
        <TourRoomsModal
          displayStyle={
            Object {
              "ZIndex": "1",
              "background": "none",
              "borderColor": "white",
              "display": "grid",
              "float": "left",
              "height": "0%",
              "left": "0",
              "marginTop": "2.5%",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "position": "static",
              "scrollBehavior": "smooth",
              "textRendering": "optimizelegibility",
              "top": "0",
              "width": "100%",
            }
          }
          handleImageOpen={[Function]}
          imageUrls={
            Array [
              "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg",
              "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_2.jpg",
              "https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_2_4.jpg",
            ]
          }
          rooms={
            Array [
              Object {
                "name": "bedroom_1_",
                "numImages": 3,
              },
              Object {
                "name": "bedroom_2_",
                "numImages": 4,
              },
            ]
          }
        />
      </div>
    </ModalBody>
  </Modal>
</div>
`;

exports[`Splash should render correctly with data 1`] = `
<div
  className="splash"
  id="splash-image"
>
  <img
    src="https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg"
    style={
      Object {
        "borderRadius": "5px",
        "height": "686px",
        "maxHeight": "686px",
        "maxWidth": "1082.66px",
        "width": "1082.66px",
      }
    }
  />
</div>
`;

exports[`TourRoomsModal should render correctly with data 1`] = `
Array [
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={false}
  >
    <Label
      bsClass="label"
      bsStyle="default"
      id="Bedroom 1"
      style={
        Object {
          "ZIndex": "1",
          "borderBottom": "1px solid lightGrey",
          "color": "#484848",
          "cursor": "default",
          "display": "block",
          "float": "left",
          "font": "600 36px system-ui",
          "marginLeft": "18%",
          "marginTop": "2%",
          "position": "static",
          "textRendering": "optimizelegibility",
          "width": "64.35%",
        }
      }
    >
      Bedroom 1
    </Label>
    <Col
      bsClass="col"
      componentClass="div"
      style={
        Object {
          "ZIndex": "1",
          "cursor": "crosshair",
          "display": "flex",
          "flex": "1 1 auto",
          "flexDirection": "row",
          "flexFlow": "row wrap",
          "float": "left",
          "height": "550px",
          "left": "0",
          "marginBottom": "1%",
          "marginLeft": "16%",
          "marginRight": "0.2%",
          "marginTop": "1%",
          "maxHeight": "750px",
          "maxWidth": "67%",
          "overflow": "scroll",
          "paddingBottom": "1.5%",
          "paddingLeft": "2%",
          "position": "static",
          "scrollBehavior": "smooth",
          "scrollbarColor": "#484848",
          "top": "0",
          "width": "67%",
        }
      }
    >
      <Row
        bsClass="row"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <Image
            bsClass="img"
            circle={false}
            onClick={[Function]}
            responsive={true}
            rounded={false}
            src="https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg"
            style={
              Object {
                "ZIndex": "1",
                "borderRadius": "5px",
                "cursor": "pointer",
                "display": "flex",
                "float": "left",
                "height": "auto",
                "marginRight": "20px",
                "marginTop": "5%",
                "maxHeight": "540px",
                "maxWidth": "800px",
                "position": "static",
                "width": "525px",
              }
            }
            thumbnail={false}
          />
        </div>
      </Row>
      <Row
        bsClass="row"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <Image
            bsClass="img"
            circle={false}
            onClick={[Function]}
            responsive={true}
            rounded={false}
            src="https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_2.jpg"
            style={
              Object {
                "ZIndex": "1",
                "borderRadius": "5px",
                "cursor": "pointer",
                "display": "flex",
                "float": "left",
                "height": "auto",
                "marginRight": "20px",
                "marginTop": "5%",
                "maxHeight": "540px",
                "maxWidth": "800px",
                "position": "static",
                "width": "525px",
              }
            }
            thumbnail={false}
          />
        </div>
      </Row>
      <Row
        bsClass="row"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <Image
            bsClass="img"
            circle={false}
            onClick={[Function]}
            responsive={true}
            rounded={false}
            src="https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_2_4.jpg"
            style={
              Object {
                "ZIndex": "1",
                "borderRadius": "5px",
                "cursor": "pointer",
                "display": "flex",
                "float": "left",
                "height": "auto",
                "marginRight": "20px",
                "marginTop": "5%",
                "maxHeight": "540px",
                "maxWidth": "800px",
                "position": "static",
                "width": "525px",
              }
            }
            thumbnail={false}
          />
        </div>
      </Row>
    </Col>
  </Grid>,
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={false}
  >
    <Label
      bsClass="label"
      bsStyle="default"
      id="Bedroom 2"
      style={
        Object {
          "ZIndex": "1",
          "borderBottom": "1px solid lightGrey",
          "color": "#484848",
          "cursor": "default",
          "display": "block",
          "float": "left",
          "font": "600 36px system-ui",
          "marginLeft": "18%",
          "marginTop": "2%",
          "position": "static",
          "textRendering": "optimizelegibility",
          "width": "64.35%",
        }
      }
    >
      Bedroom 2
    </Label>
    <Col
      bsClass="col"
      componentClass="div"
      style={
        Object {
          "ZIndex": "1",
          "cursor": "crosshair",
          "display": "flex",
          "flex": "1 1 auto",
          "flexDirection": "row",
          "flexFlow": "row wrap",
          "float": "left",
          "height": "550px",
          "left": "0",
          "marginBottom": "1%",
          "marginLeft": "16%",
          "marginRight": "0.2%",
          "marginTop": "1%",
          "maxHeight": "750px",
          "maxWidth": "67%",
          "overflow": "scroll",
          "paddingBottom": "1.5%",
          "paddingLeft": "2%",
          "position": "static",
          "scrollBehavior": "smooth",
          "scrollbarColor": "#484848",
          "top": "0",
          "width": "67%",
        }
      }
    >
      <Row
        bsClass="row"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <Image
            bsClass="img"
            circle={false}
            onClick={[Function]}
            responsive={true}
            rounded={false}
            style={
              Object {
                "ZIndex": "1",
                "borderRadius": "5px",
                "cursor": "pointer",
                "display": "flex",
                "float": "left",
                "height": "auto",
                "marginRight": "20px",
                "marginTop": "5%",
                "maxHeight": "540px",
                "maxWidth": "800px",
                "position": "static",
                "width": "525px",
              }
            }
            thumbnail={false}
          />
        </div>
      </Row>
      <Row
        bsClass="row"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <Image
            bsClass="img"
            circle={false}
            onClick={[Function]}
            responsive={true}
            rounded={false}
            style={
              Object {
                "ZIndex": "1",
                "borderRadius": "5px",
                "cursor": "pointer",
                "display": "flex",
                "float": "left",
                "height": "auto",
                "marginRight": "20px",
                "marginTop": "5%",
                "maxHeight": "540px",
                "maxWidth": "800px",
                "position": "static",
                "width": "525px",
              }
            }
            thumbnail={false}
          />
        </div>
      </Row>
      <Row
        bsClass="row"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <Image
            bsClass="img"
            circle={false}
            onClick={[Function]}
            responsive={true}
            rounded={false}
            style={
              Object {
                "ZIndex": "1",
                "borderRadius": "5px",
                "cursor": "pointer",
                "display": "flex",
                "float": "left",
                "height": "auto",
                "marginRight": "20px",
                "marginTop": "5%",
                "maxHeight": "540px",
                "maxWidth": "800px",
                "position": "static",
                "width": "525px",
              }
            }
            thumbnail={false}
          />
        </div>
      </Row>
      <Row
        bsClass="row"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <Image
            bsClass="img"
            circle={false}
            onClick={[Function]}
            responsive={true}
            rounded={false}
            style={
              Object {
                "ZIndex": "1",
                "borderRadius": "5px",
                "cursor": "pointer",
                "display": "flex",
                "float": "left",
                "height": "auto",
                "marginRight": "20px",
                "marginTop": "5%",
                "maxHeight": "540px",
                "maxWidth": "800px",
                "position": "static",
                "width": "525px",
              }
            }
            thumbnail={false}
          />
        </div>
      </Row>
    </Col>
  </Grid>,
]
`;

exports[`ViewRoomsModal should render correctly with data 1`] = `
Array [
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={false}
  >
    <Row
      bsClass="row"
      componentClass="div"
      style={
        Object {
          "ZIndex": "1",
          "backgroundColor": "white",
          "borderColor": "white",
          "color": "#484848",
          "display": "flex",
          "flexWrap": "column wrap",
          "float": "left",
          "font": "400 18px system-ui",
          "height": "auto",
          "left": "0",
          "marginLeft": "22.8%",
          "marginTop": "4%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "position": "static",
          "top": "0",
          "width": "100%",
        }
      }
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <img
            src="https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_1.jpg"
            style={
              Object {
                "borderRadius": "10px",
                "cursor": "crosshair",
                "display": "block",
                "float": "left",
                "height": "101px",
                "marginBottom": "10px",
                "marginRight": "20px",
                "position": "static",
                "width": "101px",
              }
            }
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <img
            src="https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_1_2.jpg"
            style={
              Object {
                "borderRadius": "10px",
                "cursor": "crosshair",
                "display": "block",
                "float": "left",
                "height": "101px",
                "marginBottom": "10px",
                "marginRight": "20px",
                "position": "static",
                "width": "101px",
              }
            }
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <img
            src="https://s3-us-west-1.amazonaws.com/fec-room-images/images/bedroom_2_4.jpg"
            style={
              Object {
                "borderRadius": "10px",
                "cursor": "crosshair",
                "display": "block",
                "float": "left",
                "height": "101px",
                "marginBottom": "10px",
                "marginRight": "20px",
                "position": "static",
                "width": "101px",
              }
            }
          />
        </div>
      </Col>
    </Row>
    <Label
      bsClass="label"
      bsStyle="default"
      style={
        Object {
          "ZIndex": "1",
          "borderBottom": "1px solid lightGrey",
          "color": "#484848",
          "cursor": "default",
          "display": "inline-block",
          "float": "left",
          "font": "500 20px system-ui",
          "height": "auto",
          "left": "0",
          "marginLeft": "22.8%",
          "maxWidth": "60%",
          "minHeight": "100%",
          "paddingBottom": "0.2%",
          "position": "static",
          "textRendering": "optimizelegibility",
          "top": "0",
          "width": "60%",
        }
      }
    >
      <span>
         
        Bedroom 1
         
      </span>
    </Label>
  </Grid>,
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={false}
  >
    <Row
      bsClass="row"
      componentClass="div"
      style={
        Object {
          "ZIndex": "1",
          "backgroundColor": "white",
          "borderColor": "white",
          "color": "#484848",
          "display": "flex",
          "flexWrap": "column wrap",
          "float": "left",
          "font": "400 18px system-ui",
          "height": "auto",
          "left": "0",
          "marginLeft": "22.8%",
          "marginTop": "4%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "position": "static",
          "top": "0",
          "width": "100%",
        }
      }
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <img
            style={
              Object {
                "borderRadius": "10px",
                "cursor": "crosshair",
                "display": "block",
                "float": "left",
                "height": "101px",
                "marginBottom": "10px",
                "marginRight": "20px",
                "position": "static",
                "width": "101px",
              }
            }
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <img
            style={
              Object {
                "borderRadius": "10px",
                "cursor": "crosshair",
                "display": "block",
                "float": "left",
                "height": "101px",
                "marginBottom": "10px",
                "marginRight": "20px",
                "position": "static",
                "width": "101px",
              }
            }
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <img
            style={
              Object {
                "borderRadius": "10px",
                "cursor": "crosshair",
                "display": "block",
                "float": "left",
                "height": "101px",
                "marginBottom": "10px",
                "marginRight": "20px",
                "position": "static",
                "width": "101px",
              }
            }
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={3}
        xs={6}
      >
        <div>
          <img
            style={
              Object {
                "borderRadius": "10px",
                "cursor": "crosshair",
                "display": "block",
                "float": "left",
                "height": "101px",
                "marginBottom": "10px",
                "marginRight": "20px",
                "position": "static",
                "width": "101px",
              }
            }
          />
        </div>
      </Col>
    </Row>
    <Label
      bsClass="label"
      bsStyle="default"
      style={
        Object {
          "ZIndex": "1",
          "borderBottom": "1px solid lightGrey",
          "color": "#484848",
          "cursor": "default",
          "display": "inline-block",
          "float": "left",
          "font": "500 20px system-ui",
          "height": "auto",
          "left": "0",
          "marginLeft": "22.8%",
          "maxWidth": "60%",
          "minHeight": "100%",
          "paddingBottom": "0.2%",
          "position": "static",
          "textRendering": "optimizelegibility",
          "top": "0",
          "width": "60%",
        }
      }
    >
      <span>
         
        Bedroom 2
         
      </span>
    </Label>
  </Grid>,
]
`;
